syntax = "proto3";
package gopi.input;

option go_package = "github.com/djthorpe/gopi/v3/rpc/input";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service Input {
    rpc Events(google.protobuf.Empty) returns (stream Event);
}

message Event {
    string name = 1;
    KeyCode keycode = 2;
    InputType type = 3;
    DeviceType device = 4;
    uint32 scancode = 5;
    google.protobuf.Timestamp ts = 6;

    enum InputType {
        INPUT_EVENT_NONE  = 0x0000;
        INPUT_EVENT_KEYPRESS    = 0x0001;
        INPUT_EVENT_KEYRELEASE  = 0x0002;
        INPUT_EVENT_KEYREPEAT   = 0x0003;
        INPUT_EVENT_ABSPOSITION  = 0x0004;
        INPUT_EVENT_RELPOSITION  = 0x0005;
        INPUT_EVENT_TOUCHPRESS     = 0x0006;
        INPUT_EVENT_TOUCHRELEASE   = 0x0007;
        INPUT_EVENT_TOUCHPOSITION  = 0x0008;   
    }

    enum DeviceType {
    	INPUT_DEVICE_NONE         = 0x0000;
	    INPUT_DEVICE_KEYBOARD     = 0x0001;
	    INPUT_DEVICE_MOUSE        = 0x0002;
	    INPUT_DEVICE_TOUCHSCREEN  = 0x0004;
	    INPUT_DEVICE_JOYSTICK     = 0x0008;
	    INPUT_DEVICE_REMOTE       = 0x0010;
    }

    enum KeyCode {
        KEYCODE_NONE  = 0x0000;
        KEYCODE_ESC = 0x0001;
        KEYCODE_1 = 0x0002;
        KEYCODE_2  = 0x0003;
        KEYCODE_3  = 0x0004;
        KEYCODE_4  = 0x0005;
        KEYCODE_5  = 0x0006;
        KEYCODE_6  = 0x0007;
        KEYCODE_7  = 0x0008;
		KEYCODE_8  = 0x0009;
		KEYCODE_9  = 0x000A;
		KEYCODE_0  = 0x000B;
		KEYCODE_MINUS  = 0x000C;
		KEYCODE_EQUAL  = 0x000D;
		KEYCODE_BACKSPACE  = 0x000E;
		KEYCODE_TAB  = 0x000F;
		KEYCODE_Q  = 0x0010;
		KEYCODE_W  = 0x0011;
		KEYCODE_E  = 0x0012;
		KEYCODE_R  = 0x0013;
		KEYCODE_T  = 0x0014;
		KEYCODE_Y  = 0x0015;
		KEYCODE_U  = 0x0016;
		KEYCODE_I  = 0x0017;
		KEYCODE_O  = 0x0018;
		KEYCODE_P  = 0x0019;
		KEYCODE_LEFTBRACE  = 0x001A;
		KEYCODE_RIGHTBRACE  = 0x001B;
		KEYCODE_ENTER  = 0x001C;
		KEYCODE_LEFTCTRL  = 0x001D;
		KEYCODE_A  = 0x001E;
		KEYCODE_S  = 0x001F;
		KEYCODE_D  = 0x0020;
		KEYCODE_F  = 0x0021;
		KEYCODE_G  = 0x0022;
		KEYCODE_H  = 0x0023;
		KEYCODE_J  = 0x0024;
		KEYCODE_K  = 0x0025;
		KEYCODE_L  = 0x0026;
		KEYCODE_SEMICOLON  = 0x0027;
		KEYCODE_APOSTROPHE  = 0x0028;
		KEYCODE_GRAVE  = 0x0029;
		KEYCODE_LEFTSHIFT  = 0x002A;
		KEYCODE_BACKSLASH  = 0x002B;
		KEYCODE_Z  = 0x002C;
		KEYCODE_X  = 0x002D;
		KEYCODE_C  = 0x002E;
		KEYCODE_V  = 0x002F;
		KEYCODE_B  = 0x0030;
		KEYCODE_N  = 0x0031;
		KEYCODE_M  = 0x0032;
		KEYCODE_COMMA  = 0x0033;
		KEYCODE_DOT  = 0x0034;
		KEYCODE_SLASH  = 0x0035;
		KEYCODE_RIGHTSHIFT  = 0x0036;
		KEYCODE_KPASTERISK  = 0x0037;
		KEYCODE_LEFTALT  = 0x0038;
		KEYCODE_SPACE  = 0x0039;
		KEYCODE_CAPSLOCK  = 0x003A;
		KEYCODE_F1  = 0x003B;
		KEYCODE_F2  = 0x003C;
		KEYCODE_F3  = 0x003D;
		KEYCODE_F4  = 0x003E;
		KEYCODE_F5  = 0x003F;
		KEYCODE_F6  = 0x0040;
		KEYCODE_F7  = 0x0041;
		KEYCODE_F8  = 0x0042;
		KEYCODE_F9  = 0x0043;
		KEYCODE_F10  = 0x0044;
		KEYCODE_NUMLOCK  = 0x0045;
		KEYCODE_SCROLLLOCK  = 0x0046;
		KEYCODE_KP7  = 0x0047;
		KEYCODE_KP8  = 0x0048;
		KEYCODE_KP9  = 0x0049;
		KEYCODE_KPMINUS  = 0x004A;
		KEYCODE_KP4  = 0x004B;
		KEYCODE_KP5  = 0x004C;
		KEYCODE_KP6  = 0x004D;
		KEYCODE_KPPLUS  = 0x004E;
		KEYCODE_KP1  = 0x004F;
		KEYCODE_KP2  = 0x0050;
		KEYCODE_KP3  = 0x0051;
		KEYCODE_KP0  = 0x0052;
		KEYCODE_KPDOT  = 0x0053;
		KEYCODE_F11  = 0x0057;
		KEYCODE_F12  = 0x0058;
		KEYCODE_KPENTER  = 0x0060;
		KEYCODE_RIGHTCTRL  = 0x0061;
		KEYCODE_KPSLASH  = 0x0062;
		KEYCODE_SYSRQ  = 0x0063;
		KEYCODE_RIGHTALT  = 0x0064;
		KEYCODE_LINEFEED  = 0x0065;
		KEYCODE_HOME  = 0x0066;
		KEYCODE_UP  = 0x0067;
		KEYCODE_PAGEUP  = 0x0068;
		KEYCODE_LEFT  = 0x0069;
		KEYCODE_RIGHT  = 0x006A;
		KEYCODE_END  = 0x006B;
		KEYCODE_DOWN  = 0x006C;
		KEYCODE_PAGEDOWN  = 0x006D;
		KEYCODE_INSERT  = 0x006E;
		KEYCODE_DELETE  = 0x006F;
		KEYCODE_MACRO  = 0x0070;
		KEYCODE_MUTE  = 0x0071;
		KEYCODE_VOLUMEDOWN  = 0x0072;
		KEYCODE_VOLUMEUP  = 0x0073;
		KEYCODE_POWER  = 0x0074;
		KEYCODE_KPEQUAL  = 0x0075;
		KEYCODE_KPPLUSMINUS  = 0x0076;
		KEYCODE_KPCOMMA  = 0x0079;
		KEYCODE_LEFTMETA  = 0x007D;
		KEYCODE_RIGHTMETA  = 0x007E;
		KEYCODE_SLEEP  = 0x008E;
		KEYCODE_WAKEUP  = 0x008F;
		KEYCODE_KPLEFTPAREN  = 0x00B3;
		KEYCODE_KPRIGHTPAREN  = 0x00B4;
		KEYCODE_F13  = 0x00B7;
		KEYCODE_F14  = 0x00B8;
		KEYCODE_F15  = 0x00B9;
		KEYCODE_F16  = 0x00BA;
		KEYCODE_F17  = 0x00BB;
		KEYCODE_F18  = 0x00BC;
		KEYCODE_F19  = 0x00BD;
		KEYCODE_F20  = 0x00BE;
		KEYCODE_F21  = 0x00BF;
		KEYCODE_F22  = 0x00C0;
		KEYCODE_F23  = 0x00C1;
		KEYCODE_F24  = 0x00C2;
		KEYCODE_CLOSE  = 0x00CE;
		KEYCODE_PLAY  = 0x00CF;
		KEYCODE_PRINT  = 0x00D2;
		KEYCODE_SEARCH  = 0x00D9;
		KEYCODE_CANCEL  = 0x00DF;
		KEYCODE_BRIGHTNESS_DOWN  = 0x00E0;
		KEYCODE_BRIGHTNESS_UP  = 0x00E1;
		KEYCODE_BRIGHTNESS_CYCLE  = 0x00F3;
		KEYCODE_BRIGHTNESS_AUTO  = 0x00F4;
		KEYCODE_MAX  = 0x02FF;
		KEYCODE_BTN0  = 0x0100;
		KEYCODE_BTN1  = 0x0101;
		KEYCODE_BTN2  = 0x0102;
		KEYCODE_BTN3  = 0x0103;
		KEYCODE_BTN4  = 0x0104;
		KEYCODE_BTN5  = 0x0105;
		KEYCODE_BTN6  = 0x0106;
		KEYCODE_BTN7  = 0x0107;
		KEYCODE_BTN8  = 0x0108;
		KEYCODE_BTN9  = 0x0109;
		KEYCODE_BTNLEFT  = 0x0110;
		KEYCODE_BTNRIGHT  = 0x0111;
		KEYCODE_BTNMIDDLE  = 0x0112;
		KEYCODE_BTNSIDE  = 0x0113;
		KEYCODE_BTNEXTRA  = 0x0114;
		KEYCODE_BTNTOUCH  = 0x014A;
    }
}
